feat:adding eta to disruptions view and fix: service provider working

--- a/app/src/main/res/layout/activity_edit_journey.xml
+++ b/app/src/main/res/layout/activity_edit_journey.xml
@@ -341,7 +341,8 @@
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/button_next"
-                android:layout_width="80dp"
+                android:textAlignment="center"
+                android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:padding="0dp"
